--- a/style.css
+++ b/style.css
@@ -1,5 +1,253 @@
-@import "./stylesheets/fastmenu.css"; 
-@import "./stylesheets/footer.css"; 
-@import "./stylesheets/theme.css"; 
-.heading{animation:type 10s linear;white-space:nowrap;overflow:hidden}@keyframes type{0%{width:0}50%{width:100%}75%{width:100%}}body{font-family:"Lato",sans-serif;background:var(--website-bg);line-height:1.5;text-align:center}.img{display:block;width:100%;height:auto}h2,h2{margin:0;padding:10px 0;font-size:33px;font-weight:500}p{margin:0;padding-bottom:10px;justify-content:flex-end}#showcase{min-height:450px;color:white;text-align:center}#showcase p{font-size:20px;letter-spacing:2px;line-height:150%}#showcase .bg-image{position:absolute;background-image:var(--website-bg),url("./img/background/stock.svg");background-position:center;background-repeat:no-repeat;background-size:cover;width:100%;height:450px;z-index:-1;opacity:.4}#showcase h1{padding-top:100px;padding-bottom:0;font-size:51px;font-weight:300;color:white}#showcase .content-wrap,#section-a .content-wrap{padding:0 .5em}#section-a{background:var(--bg);color:var(--color-text-1);padding-bottom:2em}#section-b{padding:2em 1em 1em}#section-b ul{list-style:none;margin:0;padding:0}#section-b li{margin-bottom:1em;background:var(--bg);color:var(--color-text-1)}.card-content{padding:1.5em;color:var(--color-text-1)}.card-title{color:var(--color-headings)}.content-title{color:var(--color-headings)}#section-c{background:var(--bg);color:var(--color-text-1);padding:2em}#section-d .box{padding:2em;color:var(--color-text-2)}#section-d .box p a{color:var(--color-text-2);text-decoration:none}#section-d .box:first-child{background:#d47a26}@media(min-width:620px){.grid{display:grid;grid-template-columns:1fr repeat(2,minmax(auto,25em)) 1fr}#section-a .content-text{columns:2;column-gap:2em}#section-a .content-text p{padding-top:0}.content-wrap,#section-b ul{grid-column:2/4}.box,#main-footer div{grid-column:span 2}#section-b ul{display:flex;justify-content:space-around}#section-b li{width:31%}}.btn{margin-left:20px}.btn a{letter-spacing:2px;line-height:150%;word-spacing:2px}.btn:link,.btn:visited{display:inline-block;padding:10px 30px;font-weight:500;text-decoration:none;text-transform:uppercase;font-size:.9rem;border-radius:200px;transform:scale(1);-webkit-box-shadow:1px 2px 5px rgba(0,0,0,0.801);box-shadow:1px 2px 5px rgba(0,0,0,0.801);-webkit-transition:all .3s;transition:all .3s}.btn_full:link,.btn_full:visited{background:var(--btn);border:1px solid orange;color:white;margin-right:25px}.btn_ghost:link,.btn_ghost:visited{border:1px solid orange;color:white}.btn:hover,.btn:active{background:var(--btn);transform:scale(1.1);-webkit-box-shadow:3px 8px 20px #000000d3;box-shadow:3px 8px 20px #000000d3}.btn_full:hover,.btn_full:active{border:1px solid orangered;background:0;color:black;font-weight:500}.btn_ghost:hover,.btn-ghost:active{border:1px solid orangered;color:black;font-weight:500}@media(max-width:740px){#showcase h1{font-size:40px}}@media(max-width:595px){#showcase h1{font-size:35px}}@media(max-width:500px){.btn:link,.btn:visited{padding:8px 28px}#showcase h1{font-size:25px}
+@import "./stylesheets/fastmenu.css";
+@import "./stylesheets/footer.css";
+.heading {
+    animation: type 10s linear;
+    white-space: nowrap;
+    overflow: hidden
+}
+
+@keyframes type {
+    0% {
+        width: 0;
+    }
+    50% {
+        width: 100%;
+    }
+    75% {
+        width: 100%;
+    }
+}
+body {
+    font-family: "Lato", sans-serif;
+    background: var(--website-bg);
+    line-height: 1.5;
+    text-align: center;
+}
+
+.img {
+    display: block;
+    width: 100%;
+    height: auto;
+}
+
+h2,
+h2 {
+    margin: 0;
+    padding: 10px 0;
+    font-size: 33px;
+    font-weight: 500;
+}
+
+p {
+    margin: 0;
+    padding-bottom: 10px;
+    justify-content: flex-end;
+}
+
+#showcase {
+    min-height: 450px;
+    color: white;
+    text-align: center;
+    animation: scroll;
+}
+
+#showcase p {
+    font-size: 20px;
+    letter-spacing: 2px;
+    line-height: 150%;
+}
+
+#showcase .bg-image {
+    position: absolute;
+    background-image: var(--website-bg), url("./img/background/stock.svg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 450px;
+    z-index: -1;
+    opacity: .4;
+}
+
+#showcase h1 {
+    padding-top: 100px;
+    padding-bottom: 0;
+    font-size: 51px;
+    font-weight: 300;
+    color: white;
+}
+
+#showcase .content-wrap,
+#section-a .content-wrap {
+    padding: 0 .5em;
+}
+
+#section-a {
+    background: var(--bg);
+    color: var(--color-text-1);
+    padding-bottom: 2em;
+}
+
+#section-b {
+    padding: 2em 1em 1em;
+}
+
+#section-b ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+#section-b li {
+    margin-bottom: 1em;
+    background: var(--bg);
+    color: var(--color-text-1);
+}
+
+.card-content {
+    padding: 1.5em;
+    color: var(--color-text-1);
+}
+
+.card-title {
+    color: var(--color-headings);
+}
+
+.content-title {
+    color: var(--color-headings);
+}
+
+#section-c {
+    background: var(--bg);
+    color: var(--color-text-1);
+    padding: 2em;
+}
+
+#section-d .box {
+    padding: 2em;
+    color: var(--color-text-2);
+}
+
+#section-d .box p a {
+    color: var(--color-text-2);
+    text-decoration: none;
+}
+
+#section-d .box:first-child {
+    background: #d47a26;
+}
+
+@media(min-width:620px) {
+    .grid {
+        display: grid;
+        grid-template-columns: 1fr repeat(2, minmax(auto, 25em)) 1fr;
+    }
+    #section-a .content-text {
+        columns: 2;
+        column-gap: 2em;
+    }
+    #section-a .content-text p {
+        padding-top: 0;
+    }
+    .content-wrap,
+    #section-b ul {
+        grid-column: 2/4;
+    }
+    .box,
+    #main-footer div {
+        grid-column: span 2;
+    }
+    #section-b ul {
+        display: flex;
+        justify-content: space-around;
+    }
+    #section-b li {
+        width: 31%;
+    }
+}
+
+.btn {
+    margin-left: 20px;
+}
+
+.btn a {
+    letter-spacing: 2px;
+    line-height: 150%;
+    word-spacing: 2px;
+}
+
+.btn:link,
+.btn:visited {
+    display: inline-block;
+    padding: 10px 30px;
+    font-weight: 500;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: .9rem;
+    border-radius: 200px;
+    transform: scale(1);
+    -webkit-box-shadow: 1px 2px 5px rgba(0, 0, 0, 0.801);
+    box-shadow: 1px 2px 5px rgba(0, 0, 0, 0.801);
+    -webkit-transition: all .3s;
+    transition: all .3s;
+}
+
+.btn_full:link,
+.btn_full:visited {
+    background: var(--btn);
+    border: 1px solid orange;
+    color: white;
+    margin-right: 25px;
+}
+
+.btn_ghost:link,
+.btn_ghost:visited {
+    border: 1px solid orange;
+    color: white;
+}
+
+.btn:hover,
+.btn:active {
+    background: var(--btn);
+    transform: scale(1.1);
+    -webkit-box-shadow: 3px 8px 20px #000000d3;
+    box-shadow: 3px 8px 20px #000000d3;
+}
+
+.btn_full:hover,
+.btn_full:active {
+    border: 1px solid orangered;
+    background: 0;
+    color: black;
+    font-weight: 500;
+}
+
+.btn_ghost:hover,
+.btn-ghost:active {
+    border: 1px solid orangered;
+    color: black;
+    font-weight: 500;
+}
+
+@media(max-width:740px) {
+    #showcase h1 {
+        font-size: 40px;
+    }
+}
+
+@media(max-width:595px) {
+    #showcase h1 {
+        font-size: 35px;
+    }
+}
+
+@media(max-width:500px) {
+    .btn:link,
+    .btn:visited {
+        padding: 8px 28px;
+    }
+    #showcase h1 {
+        font-size: 25px;
+    }
+
 }
