--- a/stylesheets/blog.css
+++ b/stylesheets/blog.css
@@ -1,1 +1,255 @@
-body,html{height:100%;margin:0;font-size:16px;font-family:"Lato",sans-serif;font-weight:400;line-height:1.8em;color:var(--color-text-1);text-align:center;background:var(--website-bg)}.pimg2,.pimg3,.pimg4,.pimg5,.pimg6,.pimg7{position:relative;background-position:center;background-size:contain;background-repeat:no-repeat;overflow:hidden;background-attachment:fixed}.pimg2{background-image:url("../img/blog/blogbanners/movie.svg");min-height:400px}.pimg3{background-image:url("../img/blog/blogbanners/lifestyle.svg");min-height:400px}.pimg4{background-image:url("../img/blog/blogbanners/fitness.svg");min-height:400px}.pimg5{background-image:url("../img/blog/blogbanners/food.svg");min-height:400px}.pimg6{background-image:url("../img//blog/blogbanners/travel.svg");min-height:400px}.pimg7{background-image:url("../img/blog/blogbanners/tech.svg");min-height:400px}.section{text-align:center;padding:50px 8px}.section-light{background-color:var(--bg-body);color:var(--color-text-1)}.section-dark{background-color:#282e34;color:var(--color-text-2)}.ptext{position:absolute;top:50%;width:100%;text-align:center;color:var(--color-text-1);font-size:30px;letter-spacing:2px;text-transform:uppercase;font-weight:500}.ptext .border{color:var(--color-text-1);padding:10px}.ptext .border.trans{background-color:transparent}@media(max-width:568px){.pimg2,.pimg3,.pimg4,.pimg5,.pimg6,.pimg7{background-attachment:scroll;background-size:cover;min-height:200px}}.main img{width:100%;-webkit-transform:scale(1.1);transform:scale(1.1);-webkit-transition:all .5s;transition:all .5s}.main{display:grid;grid-template-columns:repeat(4,1fr);grid-gap:30px;margin:30px 15px 0 15px}.singleBlog{ background-color: white; position:relative;overflow:hidden;-webkit-box-sizing:border-box;box-sizing:border-box;-webkit-box-shadow:0 2px 10px #ccc;box-shadow:0 2px 10px #ccc;-webkit-transition:all .5s;transition:all .5s}.singleBlog:hover{-webkit-box-shadow:0 2px 13px #ccc;box-shadow:0 2px 13px #ccc;-webkit-transition:all .5s;transition:all .5s}.singleBlog:hover img{-webkit-transform:scale(1.2);transform:scale(1.2);-webkit-transition:all .4s;transition:all .4s}.blogContent{position:absolute;left:0;bottom:-23.5rem;width:100%;color:var(--color-text-2);font-weight:600;padding:10px 5px;background-image:var(--website-bg);-webkit-transition:all .5s;transition:all .5s}.singleBlog:hover .blogContent{bottom:0;height:100%;-webkit-transition:all .5s;transition:all .5s}.blogContent h3{font-size:16px;font-weight:500;margin:0rem .5rem;text-align:justify}.blogContent h3 span{display:block;margin-top:5px;font-weight:600;color:var(--color-text-1);font-size:18px}.blogContent a{font-size:14px;font-weight:500}.blogContent .btn{display:inline-block;padding:5px 10px;border:1px solid #fff;border-radius:3px;font-weight:400;background:white}.blogContent .btn:hover{background:black;color:white;-webkit-transition:all .5s;transition:all .5s}.blogContent a{text-decoration:none;color:black}@media(max-width:992px){.main{grid-template-columns:repeat(3,1fr);grid-gap:20px}.singleBlog{height:100%;width:100%}}@media(max-width:767px){.main{grid-template-columns:repeat(2,1fr);grid-gap:15px}.singleBlog{height:100%;width:100%}}@media(max-width:500px){.main{grid-template-columns:repeat(1,1fr)}.singleBlog{height:100%;width:100%}}@media only screen and (max-width:1200px){.singleBlog{height:100%;width:100%}}@media only screen and (max-width:1023px){.singleBlog{height:100%;width:100%}}
+@import "../stylesheets/fastmenu.css";
+@import "../stylesheets/footer.css";
+body
+{
+    font-family: "Lato", sans-serif;
+    font-weight: 400;
+    color: var(--color-text-1);
+    background: var(--website-bg);
+
+}
+
+.pimg2,
+.pimg3,
+.pimg4,
+.pimg5,
+.pimg6,
+.pimg7 {
+    position: relative;
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+    overflow: hidden;
+    background-attachment: fixed;
+}
+
+.pimg2 {
+    background-image: url("../img/blog/blogbanners/movie.svg");
+    min-height: 400px;
+}
+
+.pimg3 {
+    background-image: url("../img/blog/blogbanners/lifestyle.svg");
+    min-height: 400px;
+}
+
+.pimg4 {
+    background-image: url("../img/blog/blogbanners/fitness.svg");
+    min-height: 400px;
+}
+
+.pimg5 {
+    background-image: url("../img/blog/blogbanners/food.svg");
+    min-height: 400px;
+}
+
+.pimg6 {
+    background-image: url("../img//blog/blogbanners/travel.svg");
+    min-height: 400px;
+}
+
+.pimg7 {
+    background-image: url("../img/blog/blogbanners/tech.svg");
+    min-height: 400px
+}
+
+.section {
+    text-align: center;
+    padding: 50px 8px;
+}
+
+.section-light {
+    background-color: var(--bg-body);
+    color: var(--color-text-1);
+}
+
+.section-dark {
+    background-color: #282e34;
+    color: var(--color-text-2);
+}
+
+.ptext {
+    position: absolute;
+    top: 50%;
+    width: 100%;
+    text-align: center;
+    color: var(--color-text-1);
+    font-size: 30px;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    font-weight: 500;
+}
+
+.ptext .border {
+    color: var(--color-text-1);
+    padding: 10px;
+}
+
+.ptext .border.trans {
+    background-color: transparent;
+}
+
+@media(max-width:568px) {
+    .pimg2,
+    .pimg3,
+    .pimg4,
+    .pimg5,
+    .pimg6,
+    .pimg7 {
+        background-attachment: scroll;
+        background-size: cover;
+        min-height: 200px;
+    }
+}
+
+.main img {
+    width: 100%;
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
+    -webkit-transition: all .5s;
+    transition: all .5s;
+}
+
+.main {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 30px;
+    margin: 30px 15px 0 15px;
+}
+
+.singleBlog {
+    background-color: white;
+    position: relative;
+    overflow: hidden;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    -webkit-box-shadow: 0 2px 10px #ccc;
+    box-shadow: 0 2px 10px #ccc;
+    -webkit-transition: all .5s;
+    transition: all .5s;
+}
+
+.singleBlog:hover {
+    -webkit-box-shadow: 0 2px 13px #ccc;
+    box-shadow: 0 2px 13px #ccc;
+    -webkit-transition: all .5s;
+    transition: all .5s;
+}
+
+.singleBlog:hover img {
+    -webkit-transform: scale(1.2);
+    transform: scale(1.2);
+    -webkit-transition: all .4s;
+    transition: all .4s;
+}
+
+.blogContent {
+    position: absolute;
+    left: 0;
+    bottom: -23.5rem;
+    width: 100%;
+    color: var(--color-text-2);
+    font-weight: 600;
+    padding: 10px 5px;
+    background-image: var(--website-bg);
+    -webkit-transition: all .5s;
+    transition: all .5s;
+}
+
+.singleBlog:hover .blogContent {
+    bottom: 0;
+    height: 100%;
+    -webkit-transition: all .5s;
+    transition: all .5s;
+}
+
+.blogContent h3 {
+    font-size: 16px;
+    font-weight: 500;
+    margin: 0rem .5rem;
+    text-align: justify;
+}
+
+.blogContent h3 span {
+    display: block;
+    margin-top: 5px;
+    font-weight: 600;
+    color: var(--color-text-1);
+    font-size: 18px;
+}
+
+.blogContent a {
+    font-size: 14px;
+    font-weight: 500;
+}
+
+.blogContent .btn {
+    display: inline-block;
+    padding: 5px 10px;
+    border: 1px solid #fff;
+    border-radius: 3px;
+    font-weight: 400;
+    background: white;
+}
+
+.blogContent .btn:hover {
+    background: black;
+    color: white;
+    -webkit-transition: all .5s;
+    transition: all .5s;
+}
+
+.blogContent a {
+    text-decoration: none;
+    color: black;
+}
+
+@media(max-width:992px) {
+    .main {
+        grid-template-columns: repeat(3, 1fr);
+        grid-gap: 20px;
+    }
+    .singleBlog {
+        height: 100%;
+        width: 100%;
+    }
+}
+
+@media(max-width:767px) {
+    .main {
+        grid-template-columns: repeat(2, 1fr);
+        grid-gap: 15px;
+    }
+    .singleBlog {
+        height: 100%;
+        width: 100%;
+    }
+}
+
+@media(max-width:500px) {
+    .main {
+        grid-template-columns: repeat(1, 1fr)
+    }
+    .singleBlog {
+        height: 100%;
+        width: 100%;
+    }
+    #logo {
+        width: 100%;
+    }
+
+}
+
+@media only screen and (max-width:1200px) {
+    .singleBlog {
+        height: 100%;
+        width: 100%;
+    }
+}
+
+@media only screen and (max-width:1023px) {
+    .singleBlog {
+        height: 100%;
+        width: 100%;
+    }
+}
