--- a/stylesheets/digitalservices.css
+++ b/stylesheets/digitalservices.css
@@ -1,1 +1,153 @@
-html{font-family:"Lato",sans-serif;color:var(--color-text-1)}h1{color:white}h3,h2{color:var(--color-headings)}body{background:var(--website-bg);line-height:1.4;text-align:center}main{margin:10px 20px}img{max-width:100%}.wrapper{display:grid;grid-gap:20px}.top-container{display:grid;grid-gap:20px;grid-template-areas:"showcase showcase top-box-a" "showcase showcase top-box-b"}.showcase{grid-area:showcase;min-height:400px;background-image:-webkit-gradient(linear,left top,right bottom,from(rgba(102,97,91,0.808)),to(rgba(77,76,73,0.8))),url("../img/digitalmarketing/dgtalMarketing.jpg");background-size:cover;background-position:center;padding:3rem;display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-orient:vertical;-webkit-box-direction:normal;-ms-flex-direction:column;flex-direction:column;-webkit-box-align:start;-ms-flex-align:start;align-items:start;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;-webkit-box-shadow:var(--shadow);box-shadow:var(--shadow)}.showcase h1{font-size:4rem;margin-bottom:0;color:var(--color-text-2)}.showcase p{font-size:1.3rem;margin-top:0;color:var(--color-text-2)}.top-box{background:var(--bg-body);display:grid;-webkit-box-align:center;-ms-flex-align:center;align-items:center;justify-items:center;-webkit-box-shadow:var(--shadow);box-shadow:var(--shadow);padding:1.5rem}.top-box-a{grid-area:top-box-a}.top-box-b{grid-area:top-box-b}.boxes{display:grid;grid-gap:20px;margin-bottom:20px;margin-top:20px;grid-template-columns:repeat(auto-fit,minmax(200px,1fr))}.box{background:var(--bg-body);text-align:center;padding:1.5rem 2rem;-webkit-box-shadow:var(--shadow);box-shadow:var(--shadow)}.info{background:var(--bg-body);-webkit-box-shadow:var(--shadow);box-shadow:var(--shadow);display:grid;grid-gap:30px;grid-template-columns:repeat(2,1fr);padding:3rem}@media(max-width:700px){.top-container{grid-template-areas:"showcase showcase" "top-box-a top-box-b"}.showcase h1{font-size:2.5rem}.info{grid-template-columns:1fr}.info .btn{display:block;text-align:center;margin:auto}}@media(max-width:500px){.top-container{grid-template-areas:"showcase" "top-box-a" "top-box-b"}}
+@import "../stylesheets/fastmenu.css";
+@import "../stylesheets/footer.css";
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+h1 {
+    color: white;
+}
+
+h3,
+h2 {
+    color: var(--color-headings);
+}
+
+body {
+    background: var(--website-bg);
+    font-family: "Lato", sans-serif;
+
+}
+
+main {
+    margin: 10px 20px;
+    text-align: center;
+
+}
+
+main img {
+    max-width: 100%;
+}
+
+.wrapper {
+    display: grid;
+    grid-gap: 20px;
+}
+
+.top-container {
+    display: grid;
+    grid-gap: 20px;
+    grid-template-areas: "showcase showcase top-box-a" "showcase showcase top-box-b";
+    text-align: center;
+
+}
+
+.showcase {
+    grid-area: showcase;
+    min-height: 400px;
+    background-image: -webkit-gradient(linear, left top, right bottom, from(rgba(102, 97, 91, 0.808)), to(rgba(77, 76, 73, 0.8))), url("../img/digitalmarketing/dgtalMarketing.jpg");
+    background-size: cover;
+    background-position: center;
+    padding: 3rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-align: start;
+    -ms-flex-align: start;
+    align-items: start;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-shadow: var(--shadow);
+    box-shadow: var(--shadow);
+    text-align: center;
+
+}
+
+.showcase h1 {
+    font-size: 4rem;
+    margin-bottom: 0;
+    color: var(--color-text-2);
+}
+
+.showcase p {
+    font-size: 1.3rem;
+    margin-top: 0;
+    color: var(--color-text-2);
+}
+
+.top-box {
+    background: var(--bg-body);
+    display: grid;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    justify-items: center;
+    -webkit-box-shadow: var(--shadow);
+    box-shadow: var(--shadow);
+    padding: 1.5rem;
+}
+
+.top-box-a {
+    grid-area: top-box-a;
+}
+
+.top-box-b {
+    grid-area: top-box-b;
+}
+
+.boxes {
+    display: grid;
+    grid-gap: 20px;
+    margin-bottom: 20px;
+    margin-top: 20px;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+}
+
+.box {
+    background: var(--bg-body);
+    text-align: center;
+    padding: 1.5rem 2rem;
+    -webkit-box-shadow: var(--shadow);
+    box-shadow: var(--shadow);
+}
+
+.info {
+    background: var(--bg-body);
+    -webkit-box-shadow: var(--shadow);
+    box-shadow: var(--shadow);
+    display: grid;
+    grid-gap: 30px;
+    grid-template-columns: repeat(2, 1fr);
+    padding: 3rem;
+}
+
+@media(max-width:700px) {
+    .top-container {
+        grid-template-areas: "showcase showcase" "top-box-a top-box-b";
+    }
+    .showcase h1 {
+        font-size: 2.5rem;
+    }
+    .info {
+        grid-template-columns: 1fr;
+    }
+    .info .btn {
+        display: block;
+        text-align: center;
+        margin: auto;
+    }
+}
+
+@media(max-width:500px) {
+    .top-container {
+        grid-template-areas: "showcase" "top-box-a" "top-box-b";
+    }
+
+}
