--- a/stylesheets/fastmenu.css
+++ b/stylesheets/fastmenu.css
@@ -1,11 +1,175 @@
-@import url("https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900");@import url("https://unpkg.com/aos@next/dist/aos.css");@import url("https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css");.menu{height:70px;width:70px;top:13px;text-align:center;position:absolute;overflow:hidden;-webkit-transition:all .2s ease;transition:all .2s ease;z-index:999;position:fixed}.menu.active{width:calc(100% - 140px);-webkit-animation:circle .2s ease-in forwards}.menu.active .menuContent *{opacity:1;margin-top:4px}.menu.active .toggle i:nth-child(1){-webkit-transform:rotate(-45deg) translate(-50%,-50%);transform:rotate(-45deg) translate(-50%,-50%);top:50%}.menu.active .toggle i:nth-child(2){-webkit-transform:translateX(-100px);transform:translateX(-100px);opacity:0}.menu.active .toggle i:nth-child(3){-webkit-transform:rotate(45deg) translate(-50%,-50%);transform:rotate(45deg) translate(-50%,-50%);top:50%}.menu .toggle{width:58px;height:58px;position:absolute;left:3px;cursor:pointer;z-index:1;background:white;border-radius:50px;border:.5px solid black;-webkit-box-shadow:var(--shadow);box-shadow:var(--shadow)}.menu .toggle i{position:absolute;-webkit-transform-origin:52% 50%;transform-origin:52% 50%;width:52%;height:3px;left:13px;right:13px;margin:auto;background-color:black;z-index:100;-webkit-transition:opacity .1s ease .1s,-webkit-transform .2s ease;transition:opacity .1s ease .1s,-webkit-transform .2s ease;transition:transform .2s ease,opacity .1s ease .1s;transition:transform .2s ease,opacity .1s ease .1s,-webkit-transform .2s ease}.menu .toggle i:nth-child(1){top:40%}.menu .toggle i:nth-child(2){top:50%}.menu .toggle i:nth-child(3){top:60%}.menu .menuContent{position:absolute;width:100%;height:100%;line-height:40px;right:0;text-align:center}.menu .menuContent *{opacity:0}.menu .menuContent ul li{display:inline-block;margin-left:30px;margin-right:30px;color:white;-webkit-transition:opacity .2s ease .3s;transition:opacity .2s ease .3s;cursor:pointer;position:relative;-webkit-margin-before:0;margin-block-start:0}.menu .menuContent ul li a{text-decoration:none;color:white;z-index:1;font-size:15px;overflow:hidden;padding:9px 12px;font-weight:700;text-decoration:none;text-transform:uppercase;border-top-left-radius:25px;border-bottom-right-radius:25px;-webkit-transition:all .5s;transition:all .5s}.menu .menuContent ul li a:hover{border-top-left-radius:25px;border-bottom-right-radius:25px;padding:9px 12px;background:white;-webkit-transform:scale(1.5);transform:scale(1.5);-webkit-box-shadow:var(--shadow);box-shadow:var(--shadow);color:#0f0c0c}@-webkit-keyframes circle{0%{width:1px;margin:auto;height:1px;z-index:1000;background:cover;border-radius:100%}100%{background:orange;height:9%;width:100%;z-index:1000;margin-left:1px;border-top-left-radius:30px;border-bottom-left-radius:30px;-webkit-box-shadow:var(--shadow);box-shadow:var(--shadow)}}@media only screen and (max-width:1102px){.menu .menuContent ul li{margin-left:15px;margin-right:15px}}@media(max-width:989px){.menu .menuContent ul li{margin-left:220px;margin-right:220px}.menu.active{width:calc(100% - 140px);text-align:center;-webkit-animation:circle .2s ease-in forwards}@-webkit-keyframes circle{0%{width:1px;margin:auto;height:1px;z-index:1000;background:#eee;border-radius:100%}100%{background:orange;height:54%;width:100%;z-index:1000;margin:auto;border-top-left-radius:30px;border-bottom-right-radius:30px;border:.5px solid black;-webkit-box-shadow:var(--shadow);box-shadow:var(--shadow);left:2px}}.menu{left:0;top:0}}@media(max-width:490px){.menu .menuContent ul{margin-left:-85px}#logo{
-    width:100%;
-}.menu{
-    top: 0;
-    left: -4px;
+@import url("https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900");
+@import url("https://unpkg.com/aos@next/dist/aos.css");
+@import url("https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css");
+
+html {
+    --bg-body: #ebebeb;
+    --bg: #fcfcfc;
+    --shadow: 0 1px 5px rgba(104, 104, 104, 0.8);
+    --color-headings: #07f;
+    --color-headings-footer: #4694ee;
+    --color-text-1: #333;
+    --color-text-2: white;
+    --website-bg: -webkit-gradient(linear, left top, right bottom, from(rgba(179, 165, 42, 0.8)), to(rgba(226, 118, 17, 0.8)));
+    --btn: linear-gradient(rgba(255, 92, 17, 0.8), rgba(231, 235, 19, 0.801));
 }
-.menu .toggle{
-    height: 50px;
+.center{
+    text-align: center;
+}
+#logo {
+    height: 100px;
+}
+.logo-small{
+    height: 40px;
+}
+
+.main_h {
+    position: fixed;
+    max-height: 70px;
+    z-index: 999;
+    width: 100%;
+    padding-top: 17px;
+    background: none;
+    overflow: hidden;
+    -webkit-transition: all 0.3s;
+    transition: all 0.3s;
+    opacity: 0;
+    padding-bottom: 6px;
+  }
+  @media only screen and (max-width: 766px) {
+    .main_h {
+      padding-top: 25px;
+    }
+  }
+  
+  .open-nav {
+    max-height: 400px !important;
+  }
+  .open-nav .mobile-toggle {
+    transform: rotate(-90deg);
+    -webkit-transform: rotate(-90deg);
+  }
+  
+  .sticky {
+    background-color: #fff;
+    opacity: 1;
+    top: 0px;
+    border-bottom: 1px solid gainsboro;
+  }
+  
+  .logo {
     width: 50px;
-}
-}
+    font-size: 25px;
+    color: #8f8f8f;
+    text-transform: uppercase;
+    float: left;
+    display: block;
+    margin-top: 0;
+    line-height: 1;
+    margin-bottom: 10px;
+  }
+  @media only screen and (max-width: 766px) {
+    .logo {
+      float: none;
+    }
+  }
+  
+  nav {
+    float: right;
+    width: 94%;
+  }
+  @media only screen and (max-width: 766px) {
+    nav {
+      width: 100%;
+    }
+  }
+  nav ul {
+    list-style: none;
+    overflow: hidden;
+    text-align: right;
+    float: right;
+
+  }
+  @media only screen and (max-width: 766px) {
+    nav ul {
+      padding-top: 10px;
+      margin-bottom: 22px;
+      float: left;
+      text-align: center;
+      width: 100%;
+    }
+  }
+  nav ul li {
+    display: inline-block;
+    margin-left: 35px;
+    line-height: 1.5;
+  }
+  @media only screen and (max-width: 766px) {
+    nav ul li {
+      width: 100%;
+      padding: 7px 0;
+      margin: 0;
+    }
+  }
+  nav ul a {
+    color: #888888;
+    text-transform: uppercase;
+    padding: 10px 4px;
+    border-top-left-radius: 25px;
+    border-bottom-right-radius: 25px;
+
+    font-size: 12px;
+    -webkit-transition: all 0.5s;
+
+    transition: all 0.5s;
+  }
+  nav ul a:hover {
+    border-top-left-radius: 25px;
+    border-bottom-right-radius: 25px;
+  
+    padding: 10px 4px;
+    background: black;
+    -webkit-transform: scale(1.5);
+    transform: scale(1.5);
+    -webkit-box-shadow: var(--shadow);
+    box-shadow: var(--shadow);
+    color: white;
+  
+  
+  }
+  
+  .mobile-toggle {
+    display: none;
+    cursor: pointer;
+    font-size: 20px;
+    position: absolute;
+    right: 22px;
+    top: 0;
+    width: 30px;
+    -webkit-transition: all 200ms ease-in;
+    -moz-transition: all 200ms ease-in;
+    transition: all 200ms ease-in;
+  }
+  @media only screen and (max-width: 766px) {
+    .mobile-toggle {
+      display: block;
+    }
+  }
+  .mobile-toggle span {
+    width: 30px;
+    height: 4px;
+    margin-bottom: 6px;
+    border-radius: 1000px;
+    background: #8f8f8f;
+    display: block;
+  }
+  
+  .row {
+    width: 100%;
+    max-width: 940px;
+    margin: 0 auto;
+    position: relative;
+    padding: 0 2%;
+  }
+  
+  
