--- a/stylesheets/review.css
+++ b/stylesheets/review.css
@@ -1,1 +1,110 @@
-@import url("https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.css");@import url("https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.theme.min.css");@import url("https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css");body{font-family:"Lato",sans-serif;text-align:center}body{background-image:var(--website-bg)}.testimonial{background:var(--bg);text-align:center;padding:30px 30px 50px;margin:0 15px 100px;position:relative;margin-top:40px}.testimonial:before,.testimonial:after{content:"";border-top:40px solid var(--bg);border-right:125px solid transparent;position:absolute;bottom:-40px;left:0}.testimonial:after{border-right:0;border-left:125px solid transparent;left:auto;right:0}.testimonial .icon{display:inline-block;color:#bd986b;margin-bottom:20px;opacity:.6}.testimonial .description{font-size:16px;color:var(--color-text-1);text-align:justify;margin-bottom:30px;opacity:.9;letter-spacing:-1px}.testimonial .testimonial-content{width:100%;position:absolute;left:0}.testimonial .pic{display:inline-block;border:6px solid var(--bg);border-radius:50%;box-shadow:0 0 2px 2px #daad86;overflow:hidden;z-index:1;position:relative}.testimonial .pic img{width:100%;height:auto}.testimonial .title{font-size:15px;font-weight:bold;color:#fff;text-transform:capitalize;margin:0}.testimonial .post{display:block;font-size:14px;color:#fcf9f6}.owl-theme .owl-controls{margin-top:60px}.owl-theme .owl-controls .owl-page span{width:32px;height:10px;background:var(--bg);border:2px solid #bd986b;margin:5px;opacity:1}.owl-theme .owl-controls .owl-page.active span,.owl-theme .owl-controls.clickable .owl-page:hover span{background:#ffd9b8;border-color:#fff}.pic img{width:100px!important;height:50px}
+@import "../stylesheets/fastmenu.css";
+@import "../stylesheets/footer.css";
+@import url("https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.css");
+@import url("https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.theme.min.css");
+body {
+    font-family: "Lato", sans-serif;
+    background-image: var(--website-bg);
+
+}
+
+.testimonial {
+    background: var(--bg);
+    text-align: center;
+    padding: 30px 30px 50px;
+    margin: 0 15px 100px;
+    position: relative;
+    margin-top: 40px;
+}
+
+.testimonial:before,
+.testimonial:after {
+    content: "";
+    border-top: 40px solid var(--bg);
+    border-right: 125px solid transparent;
+    position: absolute;
+    bottom: -40px;
+    left: 0;
+}
+
+.testimonial:after {
+    border-right: 0;
+    border-left: 125px solid transparent;
+    left: auto;
+    right: 0;
+}
+
+.testimonial .icon {
+    display: inline-block;
+    color: #bd986b;
+    margin-bottom: 20px;
+    opacity: .6;
+}
+
+.testimonial .description {
+    font-size: 16px;
+    color: var(--color-text-1);
+    text-align: justify;
+    margin-bottom: 30px;
+    opacity: .9;
+    letter-spacing: -1px;
+}
+
+.testimonial .testimonial-content {
+    width: 100%;
+    position: absolute;
+    left: 0;
+}
+
+.testimonial .pic {
+    display: inline-block;
+    border: 6px solid var(--bg);
+    border-radius: 50%;
+    box-shadow: 0 0 2px 2px #daad86;
+    overflow: hidden;
+    z-index: 1;
+    position: relative;
+}
+
+.testimonial .pic img {
+    width: 100%;
+    height: auto;
+}
+
+.testimonial .title {
+    font-size: 15px;
+    font-weight: bold;
+    color: #fff;
+    text-transform: capitalize;
+    margin: 0;
+}
+
+.testimonial .post {
+    display: block;
+    font-size: 14px;
+    color: #fcf9f6;
+}
+
+.owl-theme .owl-controls {
+    margin-top: 60px;
+}
+
+.owl-theme .owl-controls .owl-page span {
+    width: 32px;
+    height: 10px;
+    background: var(--bg);
+    border: 2px solid #bd986b;
+    margin: 5px;
+    opacity: 1;
+}
+
+.owl-theme .owl-controls .owl-page.active span,
+.owl-theme .owl-controls.clickable .owl-page:hover span {
+    background: #ffd9b8;
+    border-color: #fff;
+}
+
+.pic img {
+    width: 100px!important;
+    height: 50px;
+}
