--- a/stylesheets/about.css
+++ b/stylesheets/about.css
@@ -1,6 +1,10 @@
 @import "../stylesheets/fastmenu.css";
 @import "../stylesheets/footer.css";
-
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
 body{
     font-family: "Lato", sans-serif;
