--- a/stylesheets/fastmenu.css
+++ b/stylesheets/fastmenu.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900");
 @import url("https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css");
+@import url("https://unpkg.com/aos@next/dist/aos.css");
 
 html {
     --bg-body: #ebebeb;
