--- a/stylesheets/review.css
+++ b/stylesheets/review.css
@@ -2,6 +2,7 @@
 @import "../stylesheets/footer.css";
 @import url("https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.css");
 @import url("https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.theme.min.css");
+
 body {
     font-family: "Lato", sans-serif;
     background-image: var(--website-bg);
@@ -12,7 +13,7 @@ body {
     background: var(--bg);
     text-align: center;
     padding: 30px 30px 50px;
-    margin: 0 15px 100px;
+    margin: 15px 15px 115px;
     position: relative;
     margin-top: 40px;
 }
@@ -79,7 +80,6 @@ body {
     font-weight: bold;
     color: #fff;
     text-transform: capitalize;
-    margin: 0;
 }
 
 .testimonial .post {
